# fs-25-save-editor

./: .gitignore  CLAUDE.md  README.md  TODO.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/backup/: manager.rs
src-tauri/src/commands/: backup.rs  catalog.rs  density.rs  mod.rs  savegame.rs  update.rs  vehicle_image.rs
src-tauri/src/models/: backup.rs  career.rs  catalog.rs  changes.rs  collectible.rs  common.rs  contract.rs  density.rs  economy.rs  environment.rs  farm.rs  field.rs  mission.rs  mod.rs  placeable.rs  sale.rs  update.rs  vehicle.rs
src-tauri/src/parsers/: career.rs  collectible.rs  contract.rs  density_map_config.rs  economy.rs  environment.rs  farm.rs  field.rs  gdm.rs  grle.rs  mission.rs  mod.rs  placeable.rs  sale.rs  vehicle.rs
src-tauri/src/services/: catalog.rs  density_map.rs  mod.rs  vehicle_image.rs
src-tauri/src/validators/: mod.rs  path.rs  savegame.rs
src-tauri/src/writers/: career.rs  collectible.rs  contract.rs  economy.rs  environment.rs  farm.rs  field.rs  mission.rs  placeable.rs  sale.rs  vehicle.rs
src-tauri/tests/fixtures/savegame_complete/: careerSavegame.xml  collectibles.xml  economy.xml  environment.xml  farmland.xml  farms.xml  fields.xml  missions.xml  placeables.xml  r_contracts.xml  sales.xml  vehicles.xml
src-tauri/tests/fixtures/savegame_modded/: careerSavegame.xml  farms.xml  vehicles.xml
src/lib/: constants.ts  (+2 more)
(+81 files in other folders)
